--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ a:hover {
 
 /* Home Section */
 .home-section {
-    background: linear-gradient(to bottom left, #8B0000, #00008B ), no-repeat center center/cover;
+    background: linear-gradient(to bottom left, #004D40, #311B92); no-repeat center center/cover;
     display: flex;
     flex-direction: column; /* Changed to column to stack elements */
     justify-content: center;
@@ -1066,5 +1066,6 @@ a:hover {
     }
 
 }
+
 
 
